--- a/nestjs-prisma-setup/tsconfig.json
+++ b/nestjs-prisma-setup/tsconfig.json
@@ -1,30 +1,22 @@
 {
   "compilerOptions": {
-    "target": "es2022",
     "strict": true,
     "module": "commonjs",
-    "moduleResolution": "node",
-    "ignoreDeprecations": "5.0",
-    "resolvePackageJsonExports": false,
-    "esModuleInterop": true,
-    "isolatedModules": true,
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "useUnknownInCatchVariables": false,
     "skipLibCheck": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": false,
-    "forceConsistentCasingInFileNames": true,
+    "strictNullChecks": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": false
-  },
-  "exclude": ["node_modules", "dist"]
+  }
 }
