--- a/nestjs-prisma-setup/package.json
+++ b/nestjs-prisma-setup/package.json
@@ -25,6 +25,7 @@
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.1.12",
+    "@nestjs/swagger": "^11.2.5",
     "@nestjsi/class-validator": "^0.2.2",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.3.0",
