--- a/nestjs-prisma-setup/package.json
+++ b/nestjs-prisma-setup/package.json
@@ -25,6 +25,7 @@
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.1.12",
+    "@nestjs/schedule": "^6.1.0",
     "@nestjs/swagger": "^11.2.5",
     "@nestjsi/class-validator": "^0.2.2",
     "@prisma/adapter-pg": "^7.2.0",
@@ -34,6 +35,7 @@
     "class-validator": "^0.14.3",
     "dotenv": "^17.2.3",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
