--- a/nestjs-prisma-setup/package.json
+++ b/nestjs-prisma-setup/package.json
@@ -48,6 +48,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/bcrypt": "^6.0.0",
+    "@types/cron": "^2.0.1",
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
